# fabro

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  graph.fabro  main.py  run.json
.ai/: card-game-fast-plan.md  card-game-fast-verify.md  card-game-spec.md  solitaire-fast-verify.md  verify_data.md  verify_integration.md  verify_setup.md
.cargo/: config.toml
.fabro/: project.toml
.github/workflows/: release.yml  rust.yml  typescript.yml
apps/fabro-web/: package.json
card-game-app/: README.md  engine.py  main.py  pyproject.toml  test_engine.py  test_game.py  ui.py
card-game-app/src/card_game_tui/: __init__.py  domain.py  engine.py  main.py
card-game-app/tests/: test_domain.py  test_engine.py  test_rules.py  test_state.py
docker/split-web/: Caddyfile.static
docs/internal/: events-strategy.md  events.md  live-run-files-scope-tracked.md  mcp-server-qa-test-plan.md
docs/plans/: 2026-05-09-plural-pull-request-data-model-plan.md  2026-05-10-unified-run-type-shape-plan.md  2026-05-11-add-acp-backend-test-plan.md  2026-05-11-add-acp-backend.md  2026-05-11-add-fabro-mcp-server.md  2026-05-11-daytona-real-agent-smoke-qa-plan.md
docs/public/: docs.json
lib/crates/fabro-environment/: Cargo.toml
lib/crates/fabro-environment/src/: error.rs  id.rs  lib.rs  model.rs  store.rs
lib/crates/fabro-llm/: Cargo.toml  README.md
lib/crates/fabro-llm/src/: adapter_registry.rs  client.rs  lib.rs  model_test.rs  provider.rs  token_count.rs
lib/crates/fabro-llm/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openai_compatible.rs  vertex.rs
lib/crates/fabro-manifest/: Cargo.toml
lib/crates/fabro-manifest/src/: lib.rs
lib/crates/fabro-mcp-server/: Cargo.toml
lib/crates/fabro-mcp-server/src/: config.rs  lib.rs  run_tools.rs  server.rs
lib/crates/fabro-mcp-server/src/run_tools/: manifest.rs  search.rs
lib/crates/fabro-template/: Cargo.toml
lib/crates/fabro-template/src/: lib.rs
solitaire-app/: README.md  main.py  pyproject.toml
solitaire-app/src/solitaire_tui/: __init__.py  game.py  game_logic.py  tui.py  ui.py
solitaire-app/tests/: __init__.py  test_game.py  test_game_logic.py
stages/001-start@1/: status.json
stages/002-committed@1/: diff.patch  prompt.md  status.json
stages/002-emit@1/: response.md  status.json
stages/002-expand_spec@1/: diff.patch  status.json
stages/002-greet@1/: diff.patch  response.md  status.json
stages/002-inspect@1/: script_timing.json  status.json
stages/002-list_prs@1/: script_invocation.json  script_timing.json  status.json
stages/002-nap@1/: prompt.md  status.json
stages/002-plan_app@1/: diff.patch  prompt.md  response.md  status.json
stages/002-toolchain@1/: script_timing.json  status.json
stages/002-work@1/: diff.patch  response.md  status.json
stages/002-yes_no@1/: status.json
stages/003-audit@1/: response.md  status.json
stages/003-compile_rust@1/: script_timing.json  status.json
stages/003-confirmation@1/: status.json
stages/003-exit@1/: status.json
stages/003-impl_setup@1/: diff.patch  prompt.md  response.md  status.json
stages/003-implement_app@1/: prompt.md  response.md
stages/003-list_issues@1/: script_invocation.json  script_timing.json  status.json
stages/003-preflight_compile@1/: diff.patch  script_timing.json  status.json
stages/003-uncommitted@1/: prompt.md
stages/004-compile_typescript@1/: script_timing.json  status.json
stages/004-exit@1/: status.json
stages/004-preflight_lint@1/: script_timing.json  status.json
stages/004-verify_setup@1/: diff.patch  prompt.md  response.md
stages/004-work@2/: response.md
stages/005-audit@2/: response.md  status.json
stages/005-check_setup@1/: status.json
stages/005-fix_lints@1/: prompt.md  response.md
stages/005-implement@1/: diff.patch  prompt.md  response.md  status.json
stages/005-lint_rust@1/: script_timing.json  status.json
stages/006-impl_data@1/: diff.patch  prompt.md  response.md  status.json
stages/006-preflight_lint@2/: script_timing.json  status.json
stages/006-simplify_opus@1/: diff.patch  prompt.md  response.md  status.json
stages/006-test_rust@1/: script_timing.json  status.json
stages/007-implement@1/: diff.patch  prompt.md  response.md  status.json
stages/007-simplify_gpt@1/: diff.patch  prompt.md  response.md  status.json
stages/007-summarize@1/: response.md  status.json
stages/007-test_typescript@1/: script_timing.json  status.json
stages/007-verify_data@1/: diff.patch  prompt.md  response.md  status.json
stages/008-check_data@1/: status.json
stages/008-exit@1/: status.json
stages/008-simplify_opus@1/: diff.patch  prompt.md  response.md  status.json
stages/008-verify@1/: diff.patch  script_invocation.json  script_timing.json  status.json
stages/009-exit@1/: status.json
stages/009-fixup@1/: diff.patch  prompt.md  response.md  status.json
stages/009-fmt@1/: script_timing.json  status.json
stages/009-impl_logic@1/: diff.patch  prompt.md  response.md  status.json
stages/009-simplify_gpt@1/: diff.patch  prompt.md  response.md  status.json
stages/010-exit@1/: status.json
stages/010-verify@2/: script_timing.json  status.json
stages/010-verify_logic@1/: diff.patch  prompt.md  response.md  status.json
stages/011-check_logic@1/: status.json
stages/011-exit@1/: status.json
stages/011-fixup@1/: diff.patch  status.json
stages/011-fixup@2/: prompt.md
stages/012-impl_ui@1/: diff.patch  prompt.md  response.md  status.json
stages/012-verify@2/: diff.patch  script_timing.json  (+1 more)
(+619 files in other folders)
