[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solitaire-tui"
version = "0.1.0"
description = "Terminal-based Klondike solitaire game with curses"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
