[package]
name = "fabro-environment"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Server-owned environment domain and durable storage for Fabro"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fabro-config = { path = "../fabro-config" }
fabro-types = { path = "../fabro-types" }
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "test-util"] }
